Fixed login and signup forms
When zooming in now the forms don't overlap or go under the header.

--- a/css/signup.css
+++ b/css/signup.css
@@ -5,10 +5,10 @@
     background-color: white;
     padding: 60px 20px;
     border-radius: 12px;
-    position: absolute;
+    position: relative;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
+    margin-top: 60px;
     border-style: solid;
     border-color: #7918FE;
 }
